--- a/LastProject/Shape/mainwindow.ui
+++ b/LastProject/Shape/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1020</width>
+    <height>731</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>120</x>
       <y>10</y>
-      <width>431</width>
-      <height>361</height>
+      <width>891</width>
+      <height>681</height>
      </rect>
     </property>
    </widget>
@@ -50,13 +50,26 @@
      <string>ㅁ</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="LoadButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>310</y>
+      <width>80</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Load</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1020</width>
      <height>17</height>
     </rect>
    </property>
