--- a/Brush2/mainwindow.ui
+++ b/Brush2/mainwindow.ui
@@ -17,13 +17,36 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>80</x>
       <y>10</y>
-      <width>781</width>
+      <width>711</width>
       <height>541</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout"/>
+   </widget>
+   <widget class="QDoubleSpinBox" name="doubleSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>51</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Brush Size</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -32,7 +55,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
@@ -50,6 +73,7 @@
    <addaction name="actionImageload"/>
    <addaction name="actionBrush"/>
    <addaction name="actionErase"/>
+   <addaction name="actionColor"/>
   </widget>
   <action name="actionImageload">
    <property name="text">
@@ -64,6 +88,11 @@
   <action name="actionErase">
    <property name="text">
     <string>Erase</string>
+   </property>
+  </action>
+  <action name="actionColor">
+   <property name="text">
+    <string>Color</string>
    </property>
   </action>
  </widget>
